# soroban-starter-kit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
contracts/escrow/: Cargo.toml
contracts/escrow/scripts/: deploy.sh
contracts/escrow/src/: admin.rs  errors.rs  events.rs  lib.rs  prop_test.rs  storage.rs  test.rs
contracts/escrow/test_snapshots/test/: test_fund.1.json  test_initialize.1.json  test_raise_dispute.1.json  test_resolve_dispute_to_buyer.1.json  test_resolve_dispute_to_seller.1.json
docs/: security.md
soroban-starter-kit/: Cargo.toml  LICENSE  README.md
soroban-starter-kit/contracts/escrow/: Cargo.toml
soroban-starter-kit/contracts/escrow/scripts/: deploy.sh
soroban-starter-kit/contracts/escrow/src/: lib.rs  test.rs
soroban-starter-kit/contracts/token/: Cargo.toml
soroban-starter-kit/contracts/token/scripts/: deploy.sh
soroban-starter-kit/contracts/token/src/: lib.rs  test.rs
soroban-starter-kit/examples/frontend/: README.md  api-spec.js  app.js  codegen.js  index.html  package.json  styles.css
soroban-starter-kit/examples/react-native/: README.md  index.js  package.json  tsconfig.json
soroban-starter-kit/examples/react-native/__tests__/: cache.test.ts  collaboration.test.ts  dashboard.test.ts  export.test.ts  mobileTestFramework.test.ts  offlineQueue.test.ts
soroban-starter-kit/examples/react-native/src/: App.tsx
soroban-starter-kit/examples/react-native/src/components/: Button.tsx  Input.tsx  OfflineBanner.tsx  Widget.tsx
soroban-starter-kit/examples/react-native/src/hooks/: useCollaboration.ts  useOffline.ts  useOrientation.ts
soroban-starter-kit/examples/react-native/src/screens/: CollabScreen.tsx  DashboardScreen.tsx  EscrowScreen.tsx  ExportScreen.tsx  QueueScreen.tsx  TokenScreen.tsx
soroban-starter-kit/examples/react-native/src/testing/: index.ts  mobileTestFramework.ts  types.ts
soroban-starter-kit/examples/react-native/src/theme/: index.ts
soroban-starter-kit/examples/react-native/src/utils/: cache.ts  dashboard.ts  export.ts  history.ts  soroban.ts
(+131 files in other folders)
