[package]
name = "soroban-token-template"
version = "0.1.0"
edition = "2021"
authors = ["Soroban Templates Contributors"]
description = "A production-ready Soroban token contract template"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[[bin]]
name = "soroban-token-template"
path = "src/bin/main.rs"